@@ -2,41 +2,39 @@ package com.closure13k.aaronfmpt2.servlet;
 
 import com.closure13k.aaronfmpt2.logic.Controller;
 import com.closure13k.aaronfmpt2.logic.InputValidator;
-import com.closure13k.aaronfmpt2.logic.model.Citizen;
-import com.closure13k.aaronfmpt2.logic.model.Procedure;
 import com.closure13k.aaronfmpt2.logic.model.Turn;
-import java.io.IOException;
-import java.time.LocalDate;
-import java.util.ArrayList;
-import java.util.List;
-import java.util.Objects;
-import java.util.function.Predicate;
 import javax.servlet.ServletException;
 import javax.servlet.annotation.WebServlet;
 import javax.servlet.http.HttpServlet;
 import javax.servlet.http.HttpServletRequest;
 import javax.servlet.http.HttpServletResponse;
+import java.io.IOException;
+import java.time.LocalDate;
+import java.util.List;
+import java.util.Objects;
+import java.util.function.Predicate;
+import java.util.logging.Logger;
+import java.util.stream.Collectors;
 
 @WebServlet(name = "TurnServlet", urlPatterns = {"/TurnServlet"})
 public class TurnServlet extends HttpServlet {
 
-    List<Turn> turnsList = new ArrayList<>();
-    
-    Controller con = Controller.getInstance();
-    
-    @Override
-    protected void doGet(HttpServletRequest request, HttpServletResponse response)
-            throws ServletException, IOException {
-        applyFiltersToList(request);
+    private static final Controller con = Controller.INSTANCE;
 
-        request.getRequestDispatcher("list.jsp")
-                .forward(request, response);
+    @Override
+    protected void doGet(HttpServletRequest request, HttpServletResponse response) {
+        applyFiltersToList(request);
+        try {
+            request.getRequestDispatcher("list.jsp")
+                    .forward(request, response);
+        } catch (ServletException | IOException e) {
+            Logger.getLogger(TurnServlet.class.getName()).severe(e.getMessage());
+        }
 
     }
 
     @Override
-    protected void doPost(HttpServletRequest request, HttpServletResponse response)
-            throws ServletException, IOException {
+    protected void doPost(HttpServletRequest request, HttpServletResponse response) {
         String path = "list.jsp";
         final String nif = request.getParameter("nif_turno");
         //Validación ante posible borrado (pattern="^[0-9]{8}[A-Za-z]{1}$")
@@ -44,13 +42,24 @@ public class TurnServlet extends HttpServlet {
         if (!InputValidator.isValidNif(nif)) {
             path = "index.jsp";
         } else {
-            Citizen citizen = con.fetchCitizen(nif);
-            Procedure procedure = con.fetchProcedure(Long.valueOf(request.getParameter("tramite")));
-            con.createTurn(new Turn(citizen, procedure));
+            try {
+                Long procId = Long.valueOf(request.getParameter("tramite"));
+                con.createTurn(new Turn(
+                        con.fetchCitizen(nif),
+                        con.fetchProcedure(procId))
+                );
+            } catch (NumberFormatException e) {
+                Logger.getLogger(TurnServlet.class.getName()).severe(e.getMessage());
+                doGet(request, response);
+            }
         }
         request.setAttribute("lista_turnos", con.fetchAllTurns());
-        request.getRequestDispatcher(path)
-                .forward(request, response);
+        try {
+            request.getRequestDispatcher(path)
+                    .forward(request, response);
+        } catch (ServletException | IOException e) {
+            Logger.getLogger(TurnServlet.class.getName()).severe(e.getMessage());
+        }
     }
 
     /**
@@ -63,6 +72,7 @@ public class TurnServlet extends HttpServlet {
         String dateFilter = request.getParameter("fecha");
         String statusFilter = request.getParameter("estado");
 
+        List<Turn> turnsList;
         if (dateFilter == null) {
             turnsList = con.fetchAllTurns();
         } else {
@@ -71,7 +81,7 @@ public class TurnServlet extends HttpServlet {
 
             if (statusFilter != null && !statusFilter.isBlank()) {
                 request.setAttribute("estado", statusFilter);
-                
+
                 final Predicate<Turn> meetsStatus = turn -> Objects.equals(
                         turn.isPending(),
                         Boolean.valueOf(statusFilter)
@@ -80,7 +90,7 @@ public class TurnServlet extends HttpServlet {
                 //Pongamos un poco de streams por aquí.
                 turnsList = turnsList.stream()
                         .filter(meetsStatus)
-                        .toList();
+                        .collect(Collectors.toList());
             }
         }
         request.setAttribute("lista_turnos", turnsList);
